--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,4 +64,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'com.google.firebase:firebase-appcheck-debug:16.0.0-beta01'
+}
