--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   cloud_firestore: ^4.14.0
   firebase_storage: ^11.6.0
   animated_snack_bar: ^0.4.0
+  firebase_app_check: ^0.2.1+8
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +74,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
