profile image updated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   font_awesome_flutter: ^10.6.0
-  shared_preferences: ^2.2.2
   image_picker: ^1.0.5
   cached_network_image: ^3.3.1
   firebase_core: ^2.24.2
@@ -46,7 +45,7 @@ dependencies:
   firebase_storage: ^11.6.0
   animated_snack_bar: ^0.4.0
   firebase_app_check: ^0.2.1+8
-  path_provider: ^2.1.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +57,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
